[package]
name = "bevy-notify"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "../README.md"
repository = "https://github.com/happy-turtle/bevy-notify"
description = "Bevy plugin wrapping the crate egui-notify"
authors = ["happy-turtle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
egui-notify = "0.4"
